debug for apikey

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,8 +15,8 @@
   "clearText": "Clear text",
   "translate": "Translate",
   "speakTranslation": "Speak translation",
-  "holdToRecord": "Hold to record",
-  "releaseToStop": "Release to stop",
+  "holdToRecord": "Start recording",
+  "releaseToStop": "Stop recording",
   "errorStartingRecording": "Error starting recording. Please try again.",
   "errorProcessingRecording": "Error processing recording. Please try again.",
   "errorProcessingAudio": "AI audio processing error. Please try again later.",
