--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -15,8 +15,8 @@
   "clearText": "清空文本",
   "translate": "翻译",
   "speakTranslation": "朗读翻译",
-  "holdToRecord": "按住录音",
-  "releaseToStop": "松开停止",
+  "holdToRecord": "开始录音",
+  "releaseToStop": "停止录音",
   "errorStartingRecording": "开始录音时出错。请重试。",
   "errorProcessingRecording": "处理录音时出错。请重试。",
   "errorProcessingAudio": "AI 音频处理出现错误。请稍后再试。",
